# FFmpegMusicDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/marklei/ffmpegmusicdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegAudio.cpp  FFmpegAudio.h  FFmpegVideo.cpp  FFmpegVideo.h  Log.h  native-lib.cpp
app/src/main/java/com/marklei/ffmpegmusicdemo/: MainActivity.java  MarkPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/marklei/ffmpegmusicdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
